force-app/main/default/objects/redwing__Task__c/redwing__Task__c.object-meta.xml
<CustomObject>
    <label>Task</label>
    <nameField>
        <label>Task Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>