force-app/main/default/objects/redwing__Task__c/fields/redwing__Add_training_parameters_to_URL__c.field-meta.xml
<CustomField>
    <fullName>redwing__Add_training_parameters_to_URL__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enabling this option will pass context parameters to the External Resource URL. (e.g. https://someurl.com/?aid=ASSIGNMENT_ID&amp;tid=TPLAN_ID)</inlineHelpText>
    <label>Add training parameters to URL</label>
    <type>Checkbox</type>
</CustomField>