force-app/main/default/objects/redwing__Task__c/fields/redwing__Anonymous_Feedback__c.field-meta.xml
<CustomField>
    <fullName>redwing__Anonymous_Feedback__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, users can see a summary of the reviews and the written feedback provided, but will not see who left any of the reviews/comments.</inlineHelpText>
    <label>Anonymous Feedback</label>
    <type>Checkbox</type>
</CustomField>