force-app/main/default/objects/redwing__Task__c/fields/redwing__Disable_Comments__c.field-meta.xml
<CustomField>
    <fullName>redwing__Disable_Comments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option if you do not want users to provide comments for this task</inlineHelpText>
    <label>Disable Comments</label>
    <type>Checkbox</type>
</CustomField>