force-app/main/default/objects/redwing__Task__c/fields/redwing__Enable_Ratings__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_Ratings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Ratings</label>
    <type>Checkbox</type>
</CustomField>