force-app/main/default/objects/redwing__Task__c/fields/redwing__Enable_Video_Upload__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_Video_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enabling this option will require users to upload a video in order to complete the task</inlineHelpText>
    <label>Enable Video Upload</label>
    <type>Checkbox</type>
</CustomField>