force-app/main/default/objects/redwing__Task__c/fields/redwing__External_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>redwing__External_Resource_Name__c</fullName>
    <inlineHelpText>&quot;Friendly&quot; name for the External Resource URL. If blank, the External Resource URL will be displayed</inlineHelpText>
    <label>External Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>