force-app/main/default/objects/redwing__Task__c/fields/redwing__External_Resource_Target__c.field-meta.xml
<CustomField>
    <fullName>redwing__External_Resource_Target__c</fullName>
    <inlineHelpText>Target window for displaying the External Resource URL. &quot;blank&quot; will open a new tab/window and &quot;self&quot; will use the current tab/window</inlineHelpText>
    <label>External Resource Target</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>blank</fullName>
                <default>true</default>
                <label>blank</label>
            </value>
            <value>
                <fullName>self</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>