force-app/main/default/objects/redwing__Task__c/fields/redwing__External_Resource_URL__c.field-meta.xml
<CustomField>
    <fullName>redwing__External_Resource_URL__c</fullName>
    <inlineHelpText>URL to an external resource that will guide users on how to complete the task</inlineHelpText>
    <label>External Resource URL</label>
    <type>Url</type>
</CustomField>