force-app/main/default/objects/redwing__Task__c/fields/redwing__Max_Attempts__c.field-meta.xml
<CustomField>
    <fullName>redwing__Max_Attempts__c</fullName>
    <inlineHelpText>Maximum number of attempts to submit a task. If left empty, then number of attempts is unlimited.</inlineHelpText>
    <label>Max Attempts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>