force-app/main/default/objects/redwing__Task__c/fields/redwing__Passing_Rating__c.field-meta.xml
<CustomField>
    <fullName>redwing__Passing_Rating__c</fullName>
    <inlineHelpText>Number between 0 and 100 that will determine the minimum percentage of the ratings score for approval</inlineHelpText>
    <label>Passing Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>