force-app/main/default/objects/redwing__Task__c/fields/redwing__Require_Comments__c.field-meta.xml
<CustomField>
    <fullName>redwing__Require_Comments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option if comments should be required to submit a learning task.</inlineHelpText>
    <label>Require Comments</label>
    <type>Checkbox</type>
</CustomField>